--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 /* ================================
    FONTES
    ================================ */
-@import url('https://fonts.googleapis.com/css2?familyInter:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 /* ================================
    CSS DO PROJETO
