feat: add brand utilities CSS and enhance image visibility; update BlogPost and CreateBlogPost components for better media handling

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 @import './styles/typography.css';
 @import './styles/buttons.css';
 @import './styles/inputs.css';
+@import './styles/brand-utilities.css';
 @import './styles/utilities.css';
 @import './styles/variables.css';
 @import './styles/mobile-responsive.css';
